# qwen-tts2api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yaml
qwen_tts/: __init__.py
