[project]
name = "qwen-tts2api"
version = "0.1.0"
description = "Qwen TTS to OpenAI Speech API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=25.0.0",
    "gradio_client>=2.0.0",
]

[project.urls]
Repository = "https://github.com/aahl/qwen-tts2api"

[project.scripts]
qwen-tts = "qwen_tts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwen_tts"]
